ct-transpiler/testsuite/good/Import/A.hs
{-# LANGUAGE ComposableTypes #-}

module A where

piececategory A
