ct-transpiler/testsuite/bad/CategoryInClass/CategoryInClass.hs
{-# LANGUAGE ComposableTypes #-}

module CategoryInClass where

class Category a where
    piececategory StmtS
